[project]
name = "icici-bank-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "ddgs>=9.11.2",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-text-splitters>=1.1.1",
    "unstructured>=0.21.5",
]
